@@ -1,3 +1,4 @@
+*~
 *.bak
 *.swp
 blib
