@@ -18,7 +18,7 @@ use Test::Builder;
 use Text::Diff;
 
 our $VERSION;
-$VERSION = '20120621';
+$VERSION = '20130104';
 
 my $test = Test::Builder->new;
 
@@ -80,7 +80,7 @@ sub is_file_tidy {
     # Do not worry about trailing newlines.
     #
     $code_to_tidy =~ s/[\r\n]+$//;
-    $tidied_code  =~ s/[\r\n]+$//;
+    $tidied_code =~ s/[\r\n]+$//;
     if ( $code_to_tidy eq $tidied_code ) {
         return 1;
     }
